<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Register">

    <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">
        <TextView
                android:text="@string/CrearCuentaTXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25dp"
                android:gravity="center"
                />
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">
                <EditText
                        android:id="@+id/NombreET"
                        android:hint="@string/NombreET"
                        android:inputType="textPersonName|textCapWords"
                        android:padding="20dp"
                        android:drawableStart="@drawable/icono_nombres"
                        android:drawablePadding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
            <EditText
                    android:id="@+id/CorreoEt"
                    android:hint="@string/CorreoET"
                    android:inputType="textEmailAddress"
                    android:padding="20dp"
                    android:drawableStart="@drawable/icono_correo"
                    android:drawablePadding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:passwordToggleEnabled="true"
                app:hintEnabled="false">
            <EditText
                    android:id="@+id/ContrasenieET"
                    android:hint="@string/ContraseniaET"
                    android:inputType="textPassword"
                    android:padding="20dp"
                    android:drawableStart="@drawable/icono_password"
                    android:drawablePadding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:passwordToggleEnabled="true"
                app:hintEnabled="false">
            <EditText
                    android:id="@+id/ConfirmarContraseniaET"
                    android:hint="@string/ConfirmarContraseniaET"
                    android:inputType="textPassword"
                    android:padding="20dp"
                    android:drawableStart="@drawable/icono_password"
                    android:drawablePadding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <Button
                android:id="@+id/RegistrarUsuarioET"
                android:text="@string/RegistrarUsuarioET"
                android:layout_marginTop="15dp"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:textColor="#FFFFFF"/>
        <TextView
                android:id="@+id/TengoUnaCuetaET"
                android:text="@string/TengoUnaCuetaET"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>




    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>