<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Login">
    <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="10dp"
            android:orientation="vertical">

        <TextView
                android:id="@+id/iniciarSesionTXT"
                android:text="@string/iniciarSesionTXT"
                android:textSize="25sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

            <EditText
                    android:id="@+id/correoLogin"
                    android:hint="@string/correoLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/icono_correo"
                    android:drawablePadding="10dp"
                    android:padding="20dp"
                    android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="15dp">

            <EditText
                    android:id="@+id/contraseniaLogin"
                    android:hint="@string/contraseniaLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/icono_password"
                    android:drawablePadding="10dp"
                    android:padding="20dp"
                    android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/btn_login"
                android:text="@string/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="#FFFFFF"/>

        <TextView
                android:id="@+id/usuarioNuevoTXT"
                android:text="@string/usuarioNuevoTXT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginTop="20dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>