<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="MenuPrincipal">

    <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/contentLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/bottomToolbar">

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                app:cardBackgroundColor="@color/ColorOscuro"
                app:cardUseCompatPadding="true"
                android:padding="0.2dp"
                app:cardCornerRadius="5dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:orientation="vertical">

                <!--texto Bienvenida-->
                <TextView
                        android:text="@string/bienvenidoPrincipal"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <ProgressBar
                        android:id="@+id/progressBarDatos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center"/>

                <!--texto nombre Usuario-->
                <TextView
                        android:id="@+id/nombresPrincipal"
                        android:text="@string/nombresPrincipal"
                        android:visibility="gone"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                <!--texto Correo del Usuario-->
                <TextView
                        android:id="@+id/correoPrincipal"
                        android:text="@string/correoPrincipal"
                        android:visibility="gone"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>
        <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_marginTop="50dp"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:orientation="vertical">
            <CalendarView
                    android:id="@+id/calendarioMenuPrincipal"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/bottomToolbar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <!-- Botones de la barra de herramientas -->

            <Button
                    android:id="@+id/cerrarSesion"
                    android:text="@string/cerrarSesion"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <Button
                    android:id="@+id/agregarTarea"
                    android:text="@string/agregarTarea"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/tareas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/tareas"
                    android:drawablePadding="8dp"/>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
