<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AgregarEvento">
    <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" tools:ignore="MissingConstraints">
        <TextView
                android:id="@+id/tituloPaginaAgregarEvento"
                android:text="Agregar Evento"
                android:textSize="30dp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <!-- Editar Título -->
        <EditText
                android:id="@+id/tituloEvento"
                android:hint="@string/tituloEvento"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <!-- Editar Descripción -->
        <EditText
                android:id="@+id/descripcionEvento"
                android:hint="@string/descripcionEvento"
                android:textSize="20sp"
                android:layout_marginTop="10dp"
                android:minHeight="150dp"
                android:gravity="start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <!-- Fecha y Hora de Inicio -->
        <TextView
                android:id="@+id/fechayHoraInicioTXTEvento"
                android:text="00/00/0000 00:00"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <Button
                android:id="@+id/btn_fecha_hora_inicioEvento"
                android:text="Seleccionar Fecha y Hora de Inicio"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <!-- Fecha y Hora de Término -->
        <TextView
                android:id="@+id/fechaYHoraTerminoTXTEvento"
                android:text="00/00/0000 00:00"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <Button
                android:id="@+id/btn_fecha_hora_terminoEvento"
                android:text="Seleccionar Fecha y Hora de Término"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="right"
                android:padding="10dp">
            <CheckBox
                android:id="@+id/checkGuardarGoogleEvento"
                android:text="¿Desea Guardar en Google Calendar?"
                android:textSize="18dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!-- Botón Guardar Nota -->
        <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="right"
                android:padding="10dp">
            <Button
                    android:id="@+id/btnGuardarEvento"
                    android:text="@string/btnGuardarEvento"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>